# SO2

./: CMakeLists.txt  Makefile  README.md  main.cpp  philosopher.cpp  philosopher.hpp  states.hpp  waiter.cpp  waiter.hpp
.github/workflows/: c-cpp.yml
Project1/: README.md  philosopher.cpp
Project1/headers/: philosopher.hpp  states.hpp  waiter.hpp
Project2/: CMakeLists.txt  SpinLock.h  chat_room.cpp  chat_room.h  chat_room_manager.cpp  chat_room_manager.h  client_handler.cpp  client_handler.h  main.cpp  user_manager.cpp  user_manager.h
Project2/headers/: SpinLock.h  chat_room.h  chat_room_manager.h  client_handler.h  user_manager.h
headers/: philosopher.hpp  states.hpp  waiter.hpp
